[package]
name = "autodok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.0", features = ["full"] }
serde = "1.0.192"
serde_json = "1.0.108"
bollard = "0.15.0"
futures = "0.3.29"
futures-core = "0.3.29"
futures-util = "0.3.29"
log = "0.4.20"
env_logger = "0.10.1"
ctrlc = "3.4.2"
