[package]
name = "autodok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
tokio = { version = "1.0", features = ["full"] }
serde = "1.0.195"
serde_json = "1.0.111"
bollard = "0.15.0"
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
log = "0.4.20"
env_logger = "0.10.1"
ctrlc = "3.4.2"
rand = "0.8.5"
lazy_static = "1.4.0"
