[package]
name = "autodok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.0", features = ["full"] }
serde = "1.0.197"
serde_json = "1.0.114"
bollard = "0.15.0"
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
log = "0.4.20"
ctrlc = { version = "3.4.2", features = ["termination"] }
rand = "0.8.5"
lazy_static = "1.4.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.40"
tower-http = { version = "0.5.2", features = ["trace"] }
